fixes display on small devices (removed horizontal scroll)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,10 +14,6 @@ h2.baseline {
 font-size: 15px;
 }
 
-input#id_url {
-width: 400px;
-}
-
 /*
 input#id_url:focus {
 width: 500px;
